@@ -1,3 +1,7 @@
+2018-11-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* openclose.c: cleanup for non-ascii file names (w32 only)
+
 2018-06-28  Karl Berry  <karl@freefriends.org>
 
 	* openclose.c (open_input_with_dirname): do not prepend the
